cambie el disqus a free bets, a free bets se le cambiaron las promociones, se quitaron los slider y el checador de apuestas gratis

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,7 +22,7 @@ Responsive
     /* ***************************************
     Navigation
     *************************************** */
-    .container-navigation{grid-tempero plate-columns: 100%;}
+    .container-navigation{grid-temperoplate-columns: 100%;}
     .nav{display: none;}
 
     /* ***************************************
