--- a/css/style.css
+++ b/css/style.css
@@ -1083,8 +1083,8 @@ Free bets
     border-radius: 5px;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
     border-width: 10px;
-    border-style: dashed solid;
-    border-color: #920303;
+    border-style: groove;
+    border-color: chartreuse;
     overflow: hidden;
     padding: 1% 5% 0px 5%;
 }
@@ -1527,7 +1527,25 @@ Contenedor de dic con video
     padding-left: 3%;
 }
 .box2 div{ display: inline-block; margin-right: 5% ; }
-
+.tut{
+    float: right;
+    margin-bottom: 3%;
+    width: fit-content;
+    background: #DAE60C;
+    border-radius: 5px;
+    border: 0;
+    cursor: pointer;
+    color: white;
+    font-size: 19px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    transition: all 0.3s;
+    margin-top: -4px;
+    font-weight: 700;
+}
+.fix2{
+    display: inline;
+}
 .space{
     margin-top: 25px;}
 .fix1{
